<resources>
  <string name="config_import_vcard_type">default</string>
  <string name="config_export_vcard_type">default</string>
  <string name="config_export_dir">/sdcard/MIUI/contacts</string>
  <string name="config_export_file_prefix">(</string>
  <string name="config_export_file_suffix">)</string>
  <string name="config_export_file_extension">vcf</string>
  <string name="config_export_extensions_to_consider"/>
  <string name="pkgLabel">Kontakty i telefon</string>
  <string name="contactsList">Kontakty</string>
  <string name="launcherDialer">Telefon</string>
  <string name="shortcutContact">Kontakt</string>
  <string name="shortcutActivityTitle">Wybierz skrót do kontaktu</string>
  <string name="callShortcutActivityTitle">Wybierz numer kontaktu</string>
  <string name="messageShortcutActivityTitle">Napisz wiadomość</string>
  <string name="starredList">Starred</string>
  <string name="frequentList">Częste</string>
  <string name="strequentList">Ulubione</string>
  <string name="viewContactTitle">Szczegóły kontaktu</string>
  <string name="viewContactDesription">Podgląd kontaktu</string>
  <string name="editContactDescription">Edytuj kontakt</string>
  <string name="insertContactDescription">Utwórz kontakt</string>
  <string name="searchHint">Wyszukaj kontakt</string>
  <string name="menu_newContact">Nowy</string>
  <string name="menu_viewContact">Zobacz kontakt</string>
  <string name="menu_callNumber">Zadzwoń %s</string>
  <string name="menu_addStar">Dodaj do ulubionych</string>
  <string name="menu_removeStar">Usuń z ulubionych</string>
  <string name="menu_editContact">Edytuj</string>
  <string name="menu_deleteContact">Usuń kontakt</string>
  <string name="menu_call">Zadzwoń</string>
  <string name="menu_sendSMS">Napisz SMS</string>
  <string name="menu_sendEmail">Wyslij e-mail</string>
  <string name="menu_viewAddress">Pokaż na mapie</string>
  <string name="menu_makeDefaultNumber">Ustaw domyślny telefon</string>
  <string name="menu_makeDefaultEmail">Ustaw domyślny e-mail</string>
  <string name="menu_splitAggregate">Rozdziel</string>
  <string name="splitConfirmation_title">Rozdziel kontakt</string>
  <string name="splitConfirmation">Czy napewno chcesz rozdzielić ten kontakt: po jednym kontakcie na zestaw informacji?</string>
  <string name="menu_joinAggregate">Scal</string>
  <string name="titleJoinContactDataWith">Scal kontakty</string>
  <string name="showAllContactsJoinItem">Pokaż wszystkie kontakty</string>
  <string name="separatorJoinAggregateSuggestions">Sugerowane kontakty</string>
  <string name="separatorJoinAggregateAll">Wszystkie kontakty</string>
  <string name="contactsJoinedMessage">Kontakty połączone</string>
  <string name="contactOptionsTitle">Opcje</string>
  <string name="deleteConfirmation_title">Usuń</string>
  <string name="readOnlyContactWarning">Nie można usunąć kontaków tylko do odczytu, ale można je ukryć z listy kontaktów.</string>
  <string name="readOnlyContactDeleteConfirmation">Ten kontakt zawiera informacje z różnych kont. Informacje z kont tylko do odczytu zostaną ukryte, nie usunięte.</string>
  <string name="multipleContactDeleteConfirmation">Usunięcie kontaktu spowoduje usunięcie informacji z różnych kont.</string>
  <string name="deleteConfirmation">Kontakt zostanie usunięty.</string>
  <string name="menu_done">Gotowe</string>
  <string name="menu_doNotSave">Cofnij</string>
  <string name="editContact_title_edit">Edytuj kontakt</string>
  <string name="editContact_title_insert">Nowy</string>
  <string name="label_notes">Notatki</string>
  <string name="label_sip_address">Połączeni VOIP</string>
  <string name="ghostData_company">Firma</string>
  <string name="ghostData_title">Tytuł</string>
  <string name="invalidContactMessage">Kontakt nie istnieje.</string>
  <string name="phoneLabelsGroup">Telefon</string>
  <string name="emailLabelsGroup">E-mail</string>
  <string name="imLabelsGroup">IM</string>
  <string name="postalLabelsGroup">Adres</string>
  <string name="photoPickerNotFoundText">Brak zdjecia dla kontaktu.</string>
  <string name="attachToContact">Ikona kontaktu</string>
  <string name="customLabelPickerTitle">Etykieta</string>
  <string name="default_ringtone">Domyślny</string>
  <string name="noMatchingContacts">Nie znaleziono kontaktów</string>
  <string name="noContactsWithPhoneNumbers">Brak kontaktów z numerem telefonu.</string>
  <string name="savingContact">Zapisywanie kontaktu...</string>
  <string name="contactSavedToast">Kontakt zapisany.</string>
  <string name="contactSavedErrorToast">Błąd, nie mozna zapisać zmian.</string>
  <string name="listFoundAllContactsZero">Nie znaleziono kontaktu</string>
  <string name="contactsIconLabel">Kontakty</string>
  <string name="contactsFavoritesLabel">Ulubione</string>
  <string name="recentContactsIconLabel">Ostatnio</string>
  <string name="liveFolderAll">Wszystkie kontakty</string>
  <string name="liveFolderFavorites">Główne kontakty</string>
  <string name="liveFolderPhone">kontakty z numerem telefonu</string>
  <string name="menu_sendTextMessage">Wyślij SMS</string>
  <string name="recentCalls_callNumber">Zadzwoń %s</string>
  <string name="recentCalls_editNumberBeforeCall">Edytuj numer przed połączeniem</string>
  <string name="recentCalls_addToContact">Dodaj do kontaktów</string>
  <string name="recentCalls_removeFromRecentList">Usuń z historii</string>
  <string name="recentCalls_deleteAll">Wyczyść historię</string>
  <string name="recentCalls_empty">Historia jest pusta.</string>
  <string name="clearCallLogConfirmation_title">Wyczyść historię</string>
  <string name="clearCallLogConfirmation">Na pewno chcesz wyczyścić historię połączeń?</string>
  <string name="clearOneCallLogConfirmation">Na pewno chcesz usunąć to połączenie z historii?</string>
  <string name="clearGroupCallLogConfirmation">Na pewno chcesz usunąć te połączenia z historii?</string>
  <string name="imei">IMEI</string>
  <string name="meid">MEID</string>
  <string name="voicemail">Poczta głosowa</string>
  <string name="unknown">Nieznany</string>
  <string name="private_num">Numer prywatny</string>
  <string name="payphone">Numer płatny</string>
  <string name="dialerDialpadHintText">Wybierz numer</string>
  <string name="simContacts_emptyLoading">Wczytywanie z karty SIM…</string>
  <string name="simContacts_title">Kontakty z karty SIM</string>
  <string name="liveFolder_all_label">Wszystkie kontakty</string>
  <string name="liveFolder_favorites_label">Główne</string>
  <string name="liveFolder_phones_label">Telefony</string>
  <string name="callDetailTitle">Szczegóły połączenia</string>
  <string name="callBack">Oddzwoń</string>
  <string name="favoritesFrquentSeparator">Ostatnie</string>
  <string name="add_contact_dlg_title">Dodaj kontakt</string>
  <string name="description_image_button_one">jeden</string>
  <string name="description_image_button_two">dwa</string>
  <string name="description_image_button_three">trzy</string>
  <string name="description_image_button_four">cztery</string>
  <string name="description_image_button_five">pięć</string>
  <string name="description_image_button_six">sześć</string>
  <string name="description_image_button_seven">siedem</string>
  <string name="description_image_button_eight">osiem</string>
  <string name="description_image_button_nine">dziewięć</string>
  <string name="description_image_button_star">gwiazdka</string>
  <string name="description_image_button_delete">Usuń</string>
  <string name="description_image_button_zero">zero</string>
  <string name="description_image_button_pound">kratka</string>
  <string name="no_sdcard_title">Brak karty SD</string>
  <string name="no_sdcard_message">Nie wykryto karty SD</string>
  <string name="searching_vcard_title">Wyszukiwanie vCard</string>
  <string name="import_from_sim">Import z karty SIM</string>
  <string name="import_from_sdcard">Import z karty SD</string>
  <string name="export_to_sdcard">Eksport na kartę SD</string>
  <string name="menu_checkall">Zaznacz wszystkie</string>
  <string name="menu_uncheckall">odznacz wszystkie</string>
  <string name="menu_checkall_no_photo">Brak zdjęcia</string>
  <string name="share_visible_contacts">Udostępnij widoczne kontakty</string>
  <string name="searching_vcard_message">Searching for vCard data on SD card</string>
  <string name="scanning_sdcard_failed_title">Scanning SD card failed</string>
  <string name="scanning_sdcard_failed_message">Scanning SD card failed (Reason: %s)</string>
  <string name="fail_reason_io_error">I/O Error</string>
  <string name="fail_reason_vcard_parse_error">Failed to parse vCard for unexpected reason</string>
  <string name="fail_reason_vcard_not_supported_error">Failed to parse vCard though it seems in valid format, since the current implementation does not support it</string>
  <string name="fail_reason_no_vcard_file">No vCard file found on the SD card</string>
  <string name="fail_reason_failed_to_read_files">One or more files failed to be imported (%s).</string>
  <string name="fail_reason_unknown">Unknown error</string>
  <string name="select_vcard_title">Select vCard file</string>
  <string name="progress_shower_message">"%1$s
%2$s"</string>
  <string name="reading_vcard_title">Reading vCard</string>
  <string name="reading_vcard_message">Reading vCard file(s)</string>
  <string name="reading_vcard_failed_title">Reading of vCard data has failed</string>
  <string name="reading_vcard_contacts">%1$s of %2$s contacts</string>
  <string name="reading_vcard_files">%1$s of %2$s files</string>
  <string name="confirm_export_title">Confirm export</string>
  <string name="confirm_export_message">Are you sure you want to export your contact list to \"%s\"?</string>
  <string name="exporting_contact_failed_title">Failed to export contact data</string>
  <string name="exporting_contact_failed_message">"Failed to export contact data.
Reason for failure: \"%s\""</string>
  <string name="fail_reason_no_exportable_contact">There is no exportable contact</string>
  <string name="fail_reason_too_many_vcard">Too many vCard files on the SD card</string>
  <string name="menu_accounts">Accounts</string>
  <string name="menu_share">Share</string>
  <string name="menu_sendToDesktop">Send to homescreen</string>
  <string name="menu_display_all">Show all contacts</string>
  <string name="menu_display_only_phones">Only show contacts with phone number</string>
  <string name="menu_sim_contact">SIM contacts</string>
  <string name="add_more_items">Add more</string>
  <string name="menu_remove_member">Remove contacts</string>
  <string name="menu_group_sms">Group SMS</string>
  <string name="menu_group_ringtone">Group ringtone</string>
  <string name="menu_add_member">Add contacts</string>
  <string name="btn_cancel">Cancel</string>
  <string name="edit_contact_card_delete">Delete contact</string>
  <string name="contact_call_incoming_photo">Add photo</string>
  <string name="incoming_call_photo_confirm">Use photo</string>
  <string name="incoming_call_photo_title">Zoom or move photo</string>
  <string name="menu_remove_duplicate">Remove duplicates</string>
  <string name="menu_preferences">Settings</string>
  <string name="pref_import_and_export_title">Import/Export Settings</string>
  <string name="pref_title_import">Import contacts</string>
  <string name="pref_title_export">Export contacts</string>
  <string name="pref_contacts_photo_title">Contact Photo Settings</string>
  <string name="pref_enable_contact_photo">Display contact photos</string>
  <string name="pref_batch_set_contacts_photo">Batch set contact photo</string>
  <string name="pref_batch_remove_contacts_photo">Batch delete contact photo</string>
  <string name="pref_wipe_data">Clear data</string>
  <string name="pref_key_rebuild_t9_index_title">Rebuild index data</string>
  <string name="pref_key_rebuild_t9_index_message">Able to fix contact search failure</string>
  <string name="pref_click_shortcut_title">Shortcut action</string>
</resources>