<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:icon="@drawable/ic_menu_starred_add" android:id="@id/menu_addStar" android:title="@string/menu_addStar"/>
  <item android:icon="@drawable/ic_menu_account_edit" android:id="@id/menu_edit" android:title="@string/menu_editContact" android:alphabeticShortcut="e"/>
  <item android:icon="@*android:drawable/ic_menu_share" android:id="@id/menu_share" android:title="@string/menu_share" android:alphabeticShortcut="s"/>
  <item android:icon="@drawable/ic_menu_send_to_desktop" android:id="@id/menu_sendToDesktop" android:title="@string/menu_sendToDesktop"/>
  <item android:icon="@drawable/ic_menu_account_delete" android:id="@id/menu_delete" android:title="@string/menu_deleteContact"/>
</menu>
