<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@*android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent">
  <com.android.contacts.ui.imageview.ImageNavigatorView android:layout_gravity="bottom" android:id="@id/full_image_gallery" android:layout_width="fill_parent" android:layout_height="fill_parent" android:spacing="30.0dip" android:unselectedAlpha="1.0"/>
  <RelativeLayout android:gravity="center" android:layout_gravity="top" android:background="@drawable/incoming_call_photo_top" android:layout_width="fill_parent" android:layout_height="196.0px">
    <LinearLayout android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
      <ImageView android:layout_gravity="center_vertical" android:id="@id/orientation_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:src="@drawable/lturn_selector" style="@*android:style/ButtonOnTitle"/>
      <TextView android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/incoming_call_photo_title" android:layout_weight="1.0" style="@style/TextStyleCallButton"/>
      <ImageView android:layout_gravity="center_vertical" android:id="@id/orientation_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:src="@drawable/rturn_selector" style="@*android:style/ButtonOnTitle"/>
    </LinearLayout>
  </RelativeLayout>
  <RelativeLayout android:layout_gravity="bottom" android:background="@drawable/incoming_call_photo_bottom" android:layout_width="fill_parent" android:layout_height="321.0px">
    <LinearLayout android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
      <Button android:textAppearance="@*android:style/TextAppearance.Widget.Button" android:textColor="@*android:color/white" android:layout_gravity="center_vertical" android:id="@id/btn_confirm" android:background="@drawable/btn_incoming_call_photo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/incoming_call_photo_confirm" style="@*android:style/BottomButton.Left"/>
      <Button android:textAppearance="@*android:style/TextAppearance.Widget.Button" android:textColor="@*android:color/white" android:layout_gravity="center_vertical" android:id="@id/btn_cancel" android:background="@drawable/btn_incoming_call_photo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/btn_cancel" style="@*android:style/BottomButton.Right"/>
    </LinearLayout>
  </RelativeLayout>
</FrameLayout>
