<?xml version="1.0" encoding="utf-8"?>
<com.android.contacts.ui.widget.ContactEditorView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
  <include android:id="@id/edit_photo" layout="@layout/item_photo_editor"/>
  <TextView android:textAppearance="@*android:style/TextAppearance.ListView.PrimaryItem" android:id="@id/read_only_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip"/>
  <LinearLayout android:orientation="vertical" android:id="@id/sect_general" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
  <TextView android:textAppearance="@*android:style/TextAppearance.ListView.PrimaryItem" android:id="@id/edit_read_only" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:drawableLeft="@*android:drawable/ic_dialog_alert" android:drawablePadding="10.0dip"/>
  <LinearLayout android:gravity="center_vertical" android:id="@id/edit_groups" android:background="@*android:drawable/preference_top_item" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <ImageView android:paddingRight="10.0dip" android:layout_width="40.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/sym_group_small" android:layout_centerVertical="true"/>
    <TextView android:textAppearance="@*android:style/TextAppearance.ListView.PrimaryItem" android:ellipsize="end" android:id="@id/group_names" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0"/>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@*android:drawable/arrow_right"/>
  </LinearLayout>
  <LinearLayout android:gravity="center_vertical" android:id="@id/edit_ringtone" android:background="@*android:drawable/preference_item" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <ImageView android:paddingRight="10.0dip" android:layout_width="40.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/sym_ringtone_small" android:layout_centerVertical="true"/>
    <TextView android:textAppearance="@*android:style/TextAppearance.ListView.PrimaryItem" android:ellipsize="end" android:id="@id/ringtone_names" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="1" android:layout_weight="1.0"/>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@*android:drawable/arrow_right"/>
  </LinearLayout>
  <LinearLayout android:gravity="center_vertical" android:id="@id/edit_incoming_call_photo" android:background="@*android:drawable/preference_last_item" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <ImageView android:paddingRight="10.0dip" android:layout_width="40.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/sym_photo_small" android:layout_centerVertical="true"/>
    <TextView android:textAppearance="@*android:style/TextAppearance.ListView.PrimaryItem" android:ellipsize="end" android:id="@id/incoming_call_photo" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/contact_call_incoming_photo" android:maxLines="1" android:layout_weight="1.0"/>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@*android:drawable/arrow_right"/>
  </LinearLayout>
  <ImageTextButton android:id="@id/btn_more" android:layout_marginTop="10.0dip" android:minHeight="50.0dip" android:text="@string/add_more_items" android:drawableLeft="@drawable/add_more" android:drawablePadding="10.0dip" style="@*android:style/Widget.Button.Bar"/>
  <ImageTextButton android:textAppearance="@*android:style/TextAppearance.Widget.Button" android:textColor="@*android:color/white" android:id="@id/btn_delete" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/edit_contact_card_delete" android:drawableLeft="@drawable/edit_remove" android:drawablePadding="10.0dip" style="@*android:style/Widget.Button.Bar.Delete"/>
</com.android.contacts.ui.widget.ContactEditorView>
